--- a/hackerbooks2.0/PDFViewController.xib
+++ b/hackerbooks2.0/PDFViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -15,23 +15,27 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view autoresizesSubviews="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+            <rect key="frame" x="0.0" y="64" width="320" height="504"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <webView contentMode="scaleToFill" misplaced="YES" id="vJ3-sj-viJ">
-                    <frame key="frameInset" minY="9" maxX="55" maxY="99"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vJ3-sj-viJ">
                     <color key="backgroundColor" red="0.28958413004875183" green="0.31462949514389038" blue="0.32950475811958313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="Aez-Es-vcq"/>
                     </connections>
                 </webView>
-                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" id="9K7-zM-6gB">
-                    <frame key="frameInset" width="320" height="2"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </progressView>
+                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9K7-zM-6gB"/>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="vJ3-sj-viJ" firstAttribute="top" secondItem="9K7-zM-6gB" secondAttribute="bottom" constant="7" id="0BG-6F-Z2s"/>
+                <constraint firstItem="9K7-zM-6gB" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="63v-9P-K0F"/>
+                <constraint firstItem="9K7-zM-6gB" firstAttribute="leading" secondItem="vJ3-sj-viJ" secondAttribute="leading" id="YAg-kt-hFm"/>
+                <constraint firstAttribute="trailing" secondItem="9K7-zM-6gB" secondAttribute="trailing" id="ZFJ-LG-d2l"/>
+                <constraint firstAttribute="bottom" secondItem="vJ3-sj-viJ" secondAttribute="bottom" id="sab-NC-D6F"/>
+                <constraint firstItem="9K7-zM-6gB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="yjU-Gd-ctT"/>
+                <constraint firstItem="9K7-zM-6gB" firstAttribute="trailing" secondItem="vJ3-sj-viJ" secondAttribute="trailing" id="yk2-0M-lFW"/>
+            </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <point key="canvasLocation" x="240" y="282"/>
         </view>
@@ -39,6 +43,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+        <simulatedScreenMetrics key="destination" type="retina4_0.fullscreen"/>
     </simulatedMetricsContainer>
 </document>
